--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
-    "**/*.mts"
-, "lib/firebase.js"  ],
+    "**/*.mts",
+    "lib/firebase.js"  ],
   "exclude": ["node_modules"]
 }
