--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.70.0",
     "react-hotkeys-hook": "^5.2.3",
+    "react-intersection-observer": "^10.0.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.5"
